fixed carousel height on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -737,7 +737,8 @@ body .container .services-content .selected-content picture img {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 500px;
+  height: auto;
+  max-height: 500px;
   position: relative;
   overflow: hidden;
   margin-top: 16px;
@@ -795,16 +796,21 @@ body .container .services-content .selected-content picture img {
   display: block;
 }
 .projects-section {
-  font-size: 2rem;
+  font-size: 1.8rem;
+  line-height: 2.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  margin: 50px 0;
+  margin: 50px auto;
+  width: 80%;
+}
+.projects-section h2 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 .projects-section p {
-  width: 80%;
-  padding: 20px 0;
+  padding: 20px 0 0;
 }
 /* Your Code Goes Here */
 html,
