--- a/less/carousel.less
+++ b/less/carousel.less
@@ -3,10 +3,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 500px;
+  height: auto;
+  max-height: 500px;
   position: relative;
   overflow: hidden;
   margin-top: 16px;
+
 
   .img-container {
     position: relative;
